@@ -105,6 +105,7 @@
     <Compile Include="Decoders\MMC.cs" />
     <Compile Include="Decoders\BD.cs" />
     <Compile Include="Decoders\DVD.cs" />
+    <Compile Include="Plugins\ProDOS.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
