@@ -20,7 +20,7 @@ Features
 * Supports reading CDRWin cue/bin cuesheets, Apple DiskCopy 4.2, TeleDisk and Nero Burning ROM disk images.
 * Supports reading all raw (sector by sector copy) disk images with a multiple of 512 bytes/sector, and a few known formats that are 256, 128 and variable bytes per sector.
 * Supports traversing MBR, Apple and NeXT partitioning schemes.
-* Identifies HFS, HFS+, MFS, BeFS, ext/2/3/4, FAT12/16/32, FFS/UFS/UFS2, HPFS, ISO9660, LisaFS, MinixFS, NTFS, ODS11, Opera, PCEngine, SolarFS, System V and UnixWare boot filesystem.
+* Identifies HFS, HFS+, MFS, Apple ProDOS/SOS filesystem, BeFS, ext/2/3/4, FAT12/16/32, FFS/UFS/UFS2, HPFS, ISO9660, LisaFS, MinixFS, NTFS, ODS11, Opera, PCEngine, SolarFS, System V and UnixWare boot filesystem.
 * Analyzes a disk image getting information about the disk itself and analyzes partitions and filesystems inside them
 * Can compare two disk images, even different formats, for different sectors and/or metadata
 * Can verify sectors or disk images if supported by the underlying format
